--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/material": "^5.10.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.98",
+    "@mui/material": "^5.10.4",
     "@mui/styled-engine-sc": "^5.10.0",
+    "@mui/styles": "^5.10.3",
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.9",
     "axios": "^0.27.2",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
@@ -18,9 +23,11 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
+    "redux-root-saga": "^1.1.4",
     "redux-saga": "^1.2.0",
-    "sass": "^1.54.4",
+    "sass": "^1.54.9",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss-loader": "^7.0.1"
   }
 }
