--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@mui/material": "^5.10.4",
     "@mui/styled-engine-sc": "^5.10.0",
     "@mui/styles": "^5.10.3",
-    "@reduxjs/toolkit": "^1.8.4",
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.9",
     "axios": "^0.27.2",
     "notistack": "^2.0.5",
+    "pannellum-react": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
